<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">personal diary</string>
    <string name="access">enter</string>
    <string name="ani_time">250</string>
    <string name="ani_time2">500</string>
    <string name="ani_timestartof">150</string>
	<string name="add_diary">writting diaries</string>		
	<string name="search_diaries">search diaries</string>
	<string name="exit">exit</string>
	<string name="time">time</string>
    <string name="week">week</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="title_hint">please input heading</string>
    <string name="diary_info_hint">please input what you want to say。。。。。。</string>
    <string name="weather">weather</string>
    <string-array name="weather">
        <item name="sunny">sunny</item> 
        <item name="cloudy">cloudy</item>
        <item name="overcast">overcast</item>
        <item name="rain">rail</item>
        <item name="snow">snow</item> 
        <item name="hail">hail</item> 
        <item name="smoky">smoky</item> 
        <item name="sandstorm">sandstorm</item>
    </string-array>
    <string name="empty_info">diary is not finished, save failed！</string>
    <string name="save_success">save success！</string>
    <string name="look_diary">my diary</string>
    <string name="detail_diary_info">detailed diary</string>
    <string name="op">operate</string>
    <string name="delete">delete</string>
    <string name="backups">backup to dropbox</string>
    <string name="empty">empty all diaries</string>
    <string name="delete_sure">are you sure to delete！</string>
    <string name="ok">sure</string>
    <string name="delete_over">delete success！</string>
    <string name="cancel">Cancel</string>
    <string name="is_backups">do you want to backup this diary？</string>
    <string name="empty_all">are you sure to empty diaries!</string>
    <string name="emptyall">delete all</string>
    <string name="prompt">hint</string>
    <string name="is_add_diary">add some new diaries！</string>
    <string name="detail_search_info">search diaries</string>
    <string name="password_diary_info">set password</string>
    <string name="set_pass">set password</string>
    <string name="input_pass">input password</string>
    <string name="confirm_pass">confirm password:</string>
    <string name="input_confirm_pass">confirm</string>
    <string name="set_password">password</string>
    <string name="set">setting</string>
    <string name="wrong_pass">password wrong, try again！</string>
    <string name="pass_set_success">password set success！</string>
    <string name="dif_pass">passwords are different！</string>
    <string name="pass_cancel">cancel password success！</string>
    <string name="please_set_password">please set password</string>
    <string name="please_confirm_pass">please confirm password</string>
    <string name="pass_con_title">password check</string>
    <string name="quit">exit</string>
    <string name="is_quit">are you sure to exit？</string>
    <string name="save_success_sd">data backup success！</string>
    <string name="save_failed_sd">data save failedSD！</string>
    <string name="emptyed">diaries have been emptied！</string>
    <string name="about">about</string>
	<string name="set_bg">setting</string>
	<string name="cancel_bg">Cancel</string>
	<string name="no_pass">no password</string>
	<string name="advice">feed back</string>
	<string name="uname">name:</string>
	<string name="advice_info">your advice:</string>
	<string name="submit">submit</string>
	<string name="input_name">please input your name</string>
	<string name="detail_info">please complete information！</string>
	<string name="cancel_password">cancel password</string>
	<string name="password">password</string>
    <string name="app_id">1573177749587665</string>
     <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
    
    <string name="activity_login3">登录</string>
    <string name="hint_login1">请输入手机号</string>
    <string name="hint_login2">请输入密码</string>
    <string name="regist">注册账户</string>
    <string name="find_passw">忘记密码</string>
    <string name="mark">|</string>
    <string name="title_activity_login">登录界面</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="title_activity_register">注册</string>
    <string name="school">学            校</string>
    <string name="userid">学            号</string>
    <string name="userphone">手    机    号</string>
    <string name="phonecode">短信验证码</string>
    <string name="email">邮             箱</string>
    <string name="repassword">确  认 密  码</string>
    <string name="gender">性别</string>
    <string name="genderm">男</string>
    <string name="genderw">女</string>
    <string name="logo">校   园   通</string>
    
    
	
</resources>