<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/advice_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/diary_view_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@drawable/head_blue_background"
        android:clickable="true" >

        <ImageView
            android:id="@+id/back_advice"
            android:layout_width="54dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/advice"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uname"
                android:textColor="@color/common_black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/common_black"
                android:hint="@string/input_name"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advice_info"
                android:textColor="@color/common_black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/advice_info"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:textColor="@color/common_black"
                android:gravity="top"
                android:textSize="20dp" />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <Button 
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>